third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/include_value_not_from_bytes.stderr
error[E0277]: the trait bound `UnsafeCell<u32>: FromBytes` is not satisfied
  --> tests/ui-nightly/include_value_not_from_bytes.rs:12:5
   |
12 |     include_value!("../../testdata/include_value/data");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     the trait `FromBytes` is not implemented for `UnsafeCell<u32>`
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and $N others
note: required by a bound in `AssertIsFromBytes`
  --> tests/ui-nightly/include_value_not_from_bytes.rs:12:5
   |
12 |     include_value!("../../testdata/include_value/data");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsFromBytes`
   = note: this error originates in the macro `$crate::transmute` which comes from the expansion of the macro `include_value` (in Nightly builds, run with -Z macro-backtrace for more info)
